# BankTransfer_GTestPractice

./: CMakeLists.txt
include/: BankAccount.h  ConcreteBankAccount.h  TransferService.h
src/: CMakeLists.txt  TransferService.cpp  main.cpp
tests/: CMakeLists.txt  TransferServiceTest.cpp
